--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dat.gui": "^0.7.7",
+    "gsap": "^3.6.0",
     "three": "^0.124.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
